--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,16 @@
 [project]
-name = "workshoptopic-mmmyyyy"
+name = "daprinaction-052025"
 version = "0.1.0"
-description = "Add your description here"
+description = "Dapr in Action: From Core Concepts to AI Agents Workshop"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 dependencies = []
 
 [tool.uv]
 dev-dependencies = [
     "pre-commit>=3.5.0",
+    "dapr-agents==0.5.1",
+    "python-dotenv",
+    "notebook",
+    "yfinance>=0.2.61"
 ]
