--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,7 +25,10 @@
 			]
 		}
 	}
-
+	"runArgs": [
+		"--dns=8.8.8.8",
+		"--dns=1.1.1.1"
+	]
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
 }
