--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.18
 aiosignal==1.3.2
@@ -104,6 +105,7 @@ platformdirs==4.3.7
 pre-commit==4.2.0
 prometheus-client==0.21.1
 prompt-toolkit==3.0.51
+prompty==0.1.50
 propcache==0.3.1
 protobuf==5.29.4
 psutil==7.0.0
